<resources>
    <string name="app_name">ShopI</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main_label">Activity Main</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="second_camera_activity">Second Camera Activity</string>
    <string name="capture">Capture</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Please capture a clean and well-light image of your receipt(towards the center)</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="placeholder_item_name">ORANGE JUICE</string>
    <string name="placeholder_store_name">WALMART</string>
    <string name="placeholder_simple_measurement_unit_name">pounds (lb)</string>
    <string name="placeholder_date_user_item">10/21/22</string>
    <string name="json_data_trial">{
  "user_items": [
    {
      "user_item_store": "WALMART",
      "user_item_date":"12/7/2022",
      "user_item_name": "HRSPRAY",
      "user_item_quantity": "2",
      "user_item_total_amount_paid": "5.00",
      "user_item_unit_price": "2.50"
    }
  ]
}</string>
    <string name="couldnt_analyze_receipt">Couldn\'t save and/or analyze receipt</string>
    <string name="couldnt_connect_to_camera">Couldn\'t connect to camera; encountered an error</string>
    <string name="camera_permission_not_grated">It seems your camera permission for is disabled, please allow our request or manually enable it in settings</string>
    <string name="turkey">TURKEY</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="store_history">Store History</string>
    <string name="thanksgiving_dinner_to_buy">THANKSGIVING DINNER TO BUY</string>
    <string name="store">Stores</string>
    <string name="new_item_name">New Item Name</string>
    <string name="last_bought">10/27/22</string>
    <string name="included_in_shopping_list">Exists in shopping list</string>
    <string name="quantity_sl_item_placeholder">1</string>
    <string name="enter">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit_store_name">Edit Store Name</string>
    <string name="edit_shopping_list">Edit Shopping List Name</string>
    <string name="walmart">WALMART</string>
    <string name="password">password</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="delete_store">Delete Store</string>
    <string name="delete_shopping_list">Delete Shopping List</string>
    <string name="yes">Yes</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="add_store">Add Store</string>
    <string name="store_name">Store name like Walmart, etc</string>
    <string name="add_shopping_list">Add Shopping List</string>
    <string name="store_user_items_activity">Store User Items</string>
    <string name="not_previously_bought">not previously bought</string>
    <string name="delete_shopping_list_item">Delete Shopping List Item</string>
    <string name="shopping_list_user_item_history">Shopping list User Item History</string>
    <string name="shopping_lists_history">Multiple Occurrences Details</string>
    <string name="shopping_lists_with">Shopping Lists With %s</string>
    <string name="orange_juice">ORANGE JUICE</string>
    <string name="rep_item_placeholder">parsley</string>
    <string name="add_shopping_list_user_item_activity">Add Shopping List User Item Activity</string>
    <string name="add_an_item">Add An Item</string>
    <string name="tbs">TURKEYBS</string>
    <string name="add_an_item_to_to_buy">Add An Item - To Buy</string>
    <string name="add_item">%s - Add Item</string>
    <string name="reorder_shopping_list">Move To Shopping List</string>
    <string name="purchase_history">Purchase History - %s</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Price of Package</string>
    <string name="record_details_for">Add Purchase Details For Item</string>
    <string name="audio_permission_granted">Audio Permission Granted</string>
    <string name="cant_use_this_feature">Can\'t Use Save Microphone Feature Without Granted Record Audio Permission</string>
    <string name="store_already_exists">%s No empty or preexisting store names</string>
    <string name="shopping_list_already_exists">%s No empty or preexisting shopping list names</string>
    <string name="current_store">Select a store from list below. All recorded purchase details will be stored against the store selected.</string>
    <string name="chose_a_store">You have not currently selected a store(main page), please select what store you would like to save %s in below</string>
    <string name="couldnt_rec_value">Couldn\'t recognize %s as a numeric value</string>
    <string name="couldnt_rec_mes_unit_value">Couldn\'t recognize %s as a measurement of weight</string>
    <string name="no_proper_input_detected_quantity">Error in processing input, enter proper numeric value such as 1.0</string>
    <string name="no_proper_input_detected">Error in processing input, enter proper numeric/weight values</string>
    <string name="additional_weight">Package Weight (with /Unit- per lb,oz,kg etc)</string>
    <string name="you_need_weight_unit">Please record your customary or metric measurement of weight, such as pounds or kilograms, as you have weight toggled in quantity details</string>
    <string name="only_enter_normal_numeric_value">Please only record numeric values such as \'three\'(3), as you have \'each\' toggled in quantity details</string>
    <string name="add_proper_unit_of_weight_after_numeric_value">Enter a proper unit of weight</string>
    <string name="add_proper_unit_of_weight_after_numeric_value_2">Please add a proper unit of weight after your numeric value \'%s\'</string>
    <string name="add_weight_ms">Additional weight detail despite must have proper weight unit(e.g. lb)</string>
    <string name="please_only_stand_alone_values_for_individuals">Please only enter stand alone numeric values like \'three(3)\' for quantity</string>
    <string name="actions_menu">Actions Menu</string>
    <string name="actions_shopping_list_user_item_formatted">Actions On %s</string>
    <string name="item_has_no_history">%s has no purchase history</string>
    <string name="view_other_sl_with">View Other Shopping Lists With %s</string>
    <string name="reorder_item">Move %s</string>
    <string name="delete_item">Delete %s</string>
    <string name="record_details_for_item">Record Purchase Details For %s</string>
    <string name="view_insights_for_item">View Insights For %s</string>
    <string name="exit">Exit</string>
    <string name="purchase_message">Purchase</string>
    <string name="trial_period_expired_message">Your trial period has expired. Please complete payment to continue using the app.</string>
    <string name="insights_for_itemI">Date-Price Insights for %s</string>
    <string name="data_point_tapped">%s purchased from %s on %s for unit price of %f(unit price is averaged if more than one purchase under same day)</string>
    <string name="item_rep">Item Repository</string>
    <string name="item_repository_labeled">Items</string>
    <string name="edit_rep_item">Edit Item Name</string>
    <string name="delete_rep_item">Delete \'%s\' Item</string>
    <string name="add_rep_item">Add Item to Item Repository</string>
    <string name="rep_item_activity_label">Item Repository</string>
    <string name="quantity_val_have_to_be_greater_than_0">Quantity Value has to be greater than 0</string>
    <string name="unit_price_val_have_to_be_greater_than_0">Unit price value has to be greater than 0</string>
    <string name="item_count_in_package">Item Count in Package</string>
    <string name="price_per_pound">Price per pound or preferred unit</string>
    <string name="price_per_package">Price Per Package</string>
    <string name="measurement_units">Set Weight Unit for Price Comparison</string>
    <string name="chose_a_measurement_unit">Select a unit of weight to compare item prices - Current: %s</string>
    <string name="measurement_unit"> Change Price Comparison Unit</string>
    <string name="by_package">By Package</string>
    <string name="by_weight">By Weight</string>
    <string name="choose_a_store_text_tile">Select Store</string>
    <string name="close">Close</string>
    <string name="purchase_history_name">%s - Purchase History</string>
    <string name="empty_shoping_list">"Empty Shopping list "</string>
    <string name="granola_bar">Granola Bar</string>
    <string name="placeholder_last_bought_date">10/09/23</string>
    <string name="empty_store">Empty Store</string>
    <string name="search_based_on_store_or_date">"Find store or date specific item purchase "</string>
    <string name="search_for_item">Search for An Item</string>
    <string name="total_packages_purchased">Total Packages Purchased</string>
    <string name="quantity_unit">"Quantity (without any unit)"</string>
    <string name="package_price">Package Price* (without any currency)</string>
    <string name="unit_price_by_weight">Unit Price *(with /Unit - per lb, oz, kg, etc)</string>
    <string name="price_per_unit">Price Per Unit</string>
    <string name="user_settings">Settings Menu</string>
    <string name="default_total_packages_and_items_within_package_purchased">1</string>
    <string name="no_measurement_unit_of_weight_needed_in_quantity_feild">For by weight items, only numeric values such as 1.0 are needed in the quantity feild</string>
    <string name="by_weight_items_unit_price_needs_to_have_measurement_unit">By weight item unit price needs to have a measurement unit such as \'per pound/lb\'</string>
    <string name="couldnt_rec_value_by_weight_item">Couldn\'t recognize %s as unit price with proper measurement unit</string>
    <string name="add_up_by_weight">Unit Price  is required to record purchase details for an item sold BY WEIGHT</string>
    <string name="is_not_proper_numeric_value">%s is not a proper numeric value</string>
    <string name="cant_change_quantity_of_purchased_item">Bought item quantity cannot be changed</string>
    <string name="rep_item_already_exists">%s item already exists</string>
    <string name="okay">Close</string>
    <string name="error">Error</string>
    <string name="package_price_required_details">Package Price is required to record purchase details for an item sold BY PACKAGE</string>
    <string name="unit_price_by_weight_guidelines">Sorry, couldn\'t recognize voice input for Unit Price.\n\nOnly Number value greater than zero followed by  -/lb,/kg,/g,/fl oz,/oz,/pt,/gl,/ml,/l  allowed to be entered</string>
    <string name="couldnt_rec_voice_input">Sorry, couldn\'t recognize voice input.\nPlease add .0 in the end for whole number voice input.Example, for 2 /lb to be recorded, you can say  two point zero per pound. You can provide Unit Price in following units - /lb,/kg,/g,/fl oz,/oz,/pt,/gl,/ml,/l . You can always make manual entry or edit entry recorded.</string>
    <string name="manual_unit_price_guidelines">Only Number value greater than zero followed by  -/lb,/kg,/g,/fl oz,/oz,/pt,/gl,/ml,/l allowed to be entered in Unit Price</string>
    <string name="Navigation_Tutorial"> Navigation Tutorial</string>
    <string name="add_items_to_item_repository">Add Items to Item Repository</string>
    <string name="define_store">Define Store</string>
    <string name="define_shopping_list">Define Shopping Lists</string>
    <string name="add_items_to_shopping_list">Add Items to Shopping List</string>
    <string name="set_store_for_shopping">Set Store for Shopping</string>
    <string name="shopping">Shopping</string>
    <string name="price_comparison_unit">Price Comparison Unit</string>
</resources>