<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogContainer"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:foregroundGravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:background="@drawable/nuetral_dialog_background"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            style="@style/user_item_details_text_style"
            android:layout_marginStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textTitle"
            android:background="@drawable/dialog_background"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:text="@string/edit_store_name"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="normal"
            />
        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/textTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textTitle"
            android:src="@drawable/ic_baseline_edit_24"
            app:tint="@color/white" />

        <ListView
            android:id="@+id/reorder_shopping_list_view"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            android:padding="15dp"
            android:visibility="gone"
            tools:listitem="@layout/reorder_shopping_list"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>

        <EditText
            android:id="@+id/custom_dialog_edit_text"
            style="@style/user_item_details_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:digits="qwertzuiopasdfghjklyxcvbnmABCDEFGHIJKLMONPQRSTUVWXYZ1234567890 -"
            android:inputType="text"
            android:textSize="16sp"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/delete_text"
            style="@style/user_item_details_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/walmart"
            android:text="are you sure you want to delete walmart this action cannot be undone"
            android:textColor="@color/grey_two"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf=
                "@id/textTitle"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        style="@style/user_item_details_text_style"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/cancel_button"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:textStyle="normal"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/darker_light_blue"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:theme="@style/Button.White"
        android:layout_marginTop="15dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/enterButton"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog"/>
    <Button
        style="@style/user_item_details_text_style"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/enterButton"
        android:layout_marginStart="10dp"
        android:textStyle="normal"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/enter"
        android:elevation="0dp"
        android:backgroundTint="@color/darker_light_blue"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog"/>
</androidx.constraintlayout.widget.ConstraintLayout>