<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogContainerVID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="500dp"
    android:minHeight="500dp"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moreVertActionsLayoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nuetral_dialog_background"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitle"
            style="@style/user_item_details_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@drawable/dialog_background"
            android:padding="10dp"
            android:text="@string/record_details_for"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <ImageView-->
        <!--            android:id="@+id/imageIcon"-->
        <!--            android:layout_width="50dp"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginEnd="10dp"-->
        <!--            android:contentDescription="@string/app_name"-->
        <!--            android:src="@drawable/microphone_foreground"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/textTitle"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="@id/textTitle"-->
        <!--            app:tint="@color/white" />-->


        <TextView
            android:id="@+id/chose_a_measurement_unit_text_view"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            android:layout_marginEnd="15dp"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            app:layout_goneMarginEnd="15dp"
            android:layout_marginStart="15dp"
            style="@style/user_item_details_text_style"
            android:text="@string/current_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/chose_stores_list_view"
            app:layout_constraintTop_toBottomOf="@id/chose_a_measurement_unit_text_view"
            android:padding="15dp"
            tools:listitem="@layout/simple_store_item"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/cancel_button"
        style="@style/user_item_details_text_style"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="10dp"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:theme="@style/Button.White"
        app:layout_constraintBottom_toBottomOf="@id/moreVertActionsLayoutDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moreVertActionsLayoutDialog" />


</androidx.constraintlayout.widget.ConstraintLayout>