<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nuetral_dialog_background"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitle"
            style="@style/user_item_details_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@drawable/dialog_background"
            android:padding="10dp"
            android:text="@string/record_details_for"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <ImageView-->
<!--            android:id="@+id/imageIcon"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/microphone_foreground"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/textTitle"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/textTitle"-->
<!--            app:tint="@color/white" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quantity_detail_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/textTitle">

            <EditText
                android:id="@+id/quantity_edit_text"
                style="@style/user_item_details_text_style"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_weight="0.95"
                android:background="@drawable/grey_dialog_background"
                android:hint="@string/quantity"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <ImageView
                android:id="@+id/quantity_microphone"
                android:layout_width="40dp"
                android:tint="@color/grey"
                android:layout_height="40dp"
                android:src="@drawable/microphone_foreground"
                app:layout_constraintBottom_toBottomOf="@id/quantity_edit_text"
                app:layout_constraintEnd_toEndOf="@id/quantity_edit_text"
                app:layout_constraintTop_toTopOf="@id/quantity_edit_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/unit_price_detail_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/quantity_detail_ly">


            <EditText
                android:id="@+id/unit_price_edit_text"
                style="@style/user_item_details_text_style"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.95"
                android:background="@drawable/grey_dialog_background"
                android:hint="@string/unit_price"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/unit_price_microphone"
                android:layout_width="40dp"
                android:tint="@color/grey"
                android:layout_height="40dp"
                android:src="@drawable/microphone_foreground"
                app:layout_constraintBottom_toBottomOf="@id/unit_price_edit_text"
                app:layout_constraintEnd_toEndOf="@id/unit_price_edit_text"
                app:layout_constraintTop_toTopOf="@id/unit_price_edit_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/cancel_button"
        style="@style/user_item_details_text_style"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="10dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:theme="@style/Button.White"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintEnd_toStartOf="@id/enterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog" />

    <Button
        android:id="@+id/enterButton"
        style="@style/user_item_details_text_style"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="0dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog" />
</androidx.constraintlayout.widget.ConstraintLayout>